# Nux

./: .gitignore  Nux.sdf  Nux.sln  README.md
Nux/: Nux.vcxproj  Nux.vcxproj.filters
Nux/Debug/: vc120.idb
Nux/Debug/Nux.tlog/: CL.read.1.tlog  CL.write.1.tlog  Nux.lastbuildstate  cl.command.1.tlog
test/: test.thrift
test-zookeeper/: CMakeLists.txt  DataMonitor.cpp  DataMonitor.h  Executor.cpp  Executor.h  NObject.h  NServerConfig.h  NServerConfigInfo.h  NServicesRegistry.cpp  NServicesRegistry.h  NThreadObject.h  NZooKeeper.cpp  NZooKeeper.h  NZooKeeperWatcher.h  ZooKeeperClient.cpp  main.cpp  mainTest2  test-zookeeper.vcxproj  test-zookeeper.vcxproj.filters  test.cpp  新建文本文档.txt
test/gen-cpp/: Calculator.h  test_constants.cpp  test_constants.h  test_types.cpp  test_types.h
test/test-thrift/: CMakeLists.txt  CppAsynClient.cpp  CppAsynServer.cpp  Makefile
test/test-thrift/gen-cpp/: Calculator.cpp  Calculator.h  SharedService.cpp  SharedService.h
thrift/: config.h
thrift/.deps/: TApplicationException.Plo  TOutput.Plo  VirtualProfiling.Plo
thrift/async/.deps/: TAsyncChannel.Plo  TConcurrentClientSyncInfo.Plo  libthriftnb_la-TAsyncProtocolProcessor.Plo  libthriftnb_la-TEvhttpClientChannel.Plo  libthriftnb_la-TEvhttpServer.Plo
thrift/concurrency/.deps/: Monitor.Plo  Mutex.Plo  PosixThreadFactory.Plo  ThreadManager.Plo  TimerManager.Plo  Util.Plo
thrift/processor/.deps/: PeekProcessor.Plo
thrift/protocol/.deps/: TBase64Utils.Plo  TDebugProtocol.Plo  TJSONProtocol.Plo  TMultiplexedProtocol.Plo  TProtocol.Plo  libthriftz_la-THeaderProtocol.Plo
thrift/server/.deps/: TConnectedClient.Plo  TServerFramework.Plo  TSimpleServer.Plo  TThreadPoolServer.Plo  TThreadedServer.Plo  libthriftnb_la-TNonblockingServer.Plo
(+18 files in other folders)
